# the-factory

./: .env.example  SHOWCASE.md  main.py  render.yaml  requirements.txt
app/: __init__.py  config.py  llm.py  payment.py  stats.py  store.py
app/endpoints/: __init__.py  billing.py  fx.py  github_stats.py  helpers.py  meteo.py  news.py  stocks.py  transit.py
app/static/: dashboard.html
client_package/: README.md  pyproject.toml
client_package/examples/: example_usage.py
client_package/tests/: test_client.py
client_package/the_factory_client/: __init__.py  client.py  exceptions.py
langchain_tool/: README.md  pyproject.toml
langchain_tool/examples/: example_agent.py
langchain_tool/langchain_the_factory/: __init__.py  tools.py
outbound/: email_templates.md  playbook.md  target_list.md  tracking_template.csv
tests/: test_smoke.py
