[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the-factory-client"
version = "0.1.0"
description = "Python client for The Factory — x402 micropayment agent for clean machine data"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "The Factory"}]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "solders>=0.21.0",
    "solana>=0.34.0",
    "base58>=2.1.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Factorial2026/the-factory"
Documentation = "https://github.com/Factorial2026/the-factory/blob/main/SHOWCASE.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["the_factory_client*"]
